# CC-Gen-UItimate

./: .gitignore  app.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
ccgen/: __init__.py  __main__.py
ccgen/config/: __init__.py  defaults.py
ccgen/controllers/: __init__.py  app_ctrl.py  prefs_ctrl.py  transcription_ctrl.py
ccgen/core/: __init__.py  audio.py  pipeline.py  subtitle.py  subtitle_parser.py  transcriber.py  translator.py  transliterator.py
ccgen/models/: __init__.py  file_model.py
ccgen/qml/: PreferencesWindow.qml  main.qml
ccgen/qml/components/: FileItem.qml  FileList.qml  SegmentItem.qml  TitleBar.qml
ccgen/services/: __init__.py  worker.py
ccgen/utils/: __init__.py  helpers.py  logging.py  settings.json  settings.py
tests/: conftest.py  test_audio.py  test_pipeline.py  test_subtitle.py  test_transcriber.py  test_translator.py
